fix(margins): removed unwanted white spaces by setting universal metrics

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html, body {
+    margin: 0;
+    padding: 0
+}
+
 .page {
     height: 100%;
     width: 100%;
@@ -23,7 +28,8 @@
     display: flex;
     justify-content: space-between;
     gap: 24px;
-    width: 100%
+    width: 100%;
+    margin: 0 auto;
 }
 
 .nav {
@@ -40,6 +46,7 @@
     display: flex;
     justify-content: space-between;
     gap: 100px;
+    width: 100%
 }
 
 .awesome {
@@ -105,7 +112,7 @@ button {
 
 .text-more {
     color: #1f2937;
-    font-weight: 700px;
+    font-weight: 700;
     font-size: 36px
 }
 
@@ -175,7 +182,7 @@ button {
 
 .text-description {
     font-size: 16px;
-    color: e5e7eb
+    color: #e5e7eb
 }
 
 .modal-button {
@@ -190,4 +197,13 @@ button {
     padding: 8px 100px;
     display: flex;
     justify-content: center;
+}
+
+.header, .quote-container, .footer {
+    width: 100vw;
+    box-sizing: border-box;
+}
+
+* {
+    box-sizing: border-box
 }
